--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-quick-start",
+  "name": "systeminfoapp",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "simple system monitor application based on Electron",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "",
   "keywords": [
     "Electron",
     "quick",
@@ -14,7 +14,7 @@
     "tutorial",
     "demo"
   ],
-  "author": "GitHub",
+  "author": "Olga Shitova",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^5.0.6"
